fix header on safari

--- a/www/src/components/layout/layout.module.scss
+++ b/www/src/components/layout/layout.module.scss
@@ -1,10 +1,10 @@
 /* Layout styles */
 
 .layout {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  height: 100%;
+  justify-content: space-between;
 
   header {
     display: flex;
@@ -78,8 +78,7 @@
 
   main {
     margin: 0 45px;
-    flex-grow: 1;
-    padding: 0.1px; /* to prevent margin collapsing */
+    flex: 1;
   }
 
   @media only screen and (max-width: 600px) {
