--- a/www/src/components/photos/photos.module.scss
+++ b/www/src/components/photos/photos.module.scss
@@ -2,7 +2,6 @@
   .photo {
     width: 40%;
     margin: 10px auto;
-    cursor: pointer;
     position: relative;
 
     img {
